packages/next-swc/crates/core/tests/errors/server-actions/server-graph/1/input.js
'use server'

export function foo() {}
